# Tempo

./: .gitignore  .meson.build.swp  README.md  com.github.dcharles525.Tempo.yml  meson.build
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/x86_64-com.github.dcharles525.Tempo.yml/: build-Tempo  cleanup  finish  init
.flatpak-builder/cache/summaries/: 0e42964b4a3da367eebc65ec74b7031b15bc9303050b66c828176efb225a7300-2407b9b577e8d5f48303857a6af673e3b57ebeadd19aa76944cde3bc51dbdcaf.delta  135eac3805f835df1a3340ef7712c22f6ada58368922c2400009fed51bdb74e3-941660b2c7c16328c28dda14c20fd71481d2a17e41898eb6677aec704f2c3b1f.delta  22a20043aea210404220306b71fed13e40ae1b317341722e9912122945f478ad-941660b2c7c16328c28dda14c20fd71481d2a17e41898eb6677aec704f2c3b1f.delta  22a20043aea210404220306b71fed13e40ae1b317341722e9912122945f478ad-b5d301fccd18adfca0e976506c6af73c2e8a62e614b823c91ef5d1125cfddb97.delta  2964ea8c46a6351dc402aa1a9fd36eee86afa713712323856c289c946f0be59d-2407b9b577e8d5f48303857a6af673e3b57ebeadd19aa76944cde3bc51dbdcaf.delta  2964ea8c46a6351dc402aa1a9fd36eee86afa713712323856c289c946f0be59d-4ab5328c0276a0f35e5b1fcd2deaf2d25207668639bf1f1bed39c1594ef3bd98.delta  3331e11ba56082a4215ddbd016065c20efacf9bd3685684598db3a7988c7a2e4-b5d301fccd18adfca0e976506c6af73c2e8a62e614b823c91ef5d1125cfddb97.delta  38d7bde60408657cad2429d09c49c7e1ba33c22e9916cf4640fc7ac4513f88c9-b5d301fccd18adfca0e976506c6af73c2e8a62e614b823c91ef5d1125cfddb97.delta  4c56f60dd5f495b254dc7f3864baf90f5a66ef7221295a8ddd004c12ed94ba55-941660b2c7c16328c28dda14c20fd71481d2a17e41898eb6677aec704f2c3b1f.delta  4c56f60dd5f495b254dc7f3864baf90f5a66ef7221295a8ddd004c12ed94ba55-b5d301fccd18adfca0e976506c6af73c2e8a62e614b823c91ef5d1125cfddb97.delta  69ac794131b524c348b900b3d09ff6b52a7fd2c64288d30e696ab369b7a0f2ee-2407b9b577e8d5f48303857a6af673e3b57ebeadd19aa76944cde3bc51dbdcaf.delta  8e5dc5913dbcec4b34f9481e11a622fcfd635476d92385f508c9ec03b5366b31-b5d301fccd18adfca0e976506c6af73c2e8a62e614b823c91ef5d1125cfddb97.delta  925ca07e932b5463cb726d054e9c5debbbf6c4abb93eaeb0204245a534255143-4ab5328c0276a0f35e5b1fcd2deaf2d25207668639bf1f1bed39c1594ef3bd98.delta  9af3f9bf91628eccb614224963d08727f0dd0514778ea73d9b7420ca8f493d52-2407b9b577e8d5f48303857a6af673e3b57ebeadd19aa76944cde3bc51dbdcaf.delta  (+5 more)
.flatpak-builder/checksums/: x86_64-com.github.dcharles525.Tempo.yml
.github/workflows/: main.yml
data/: Tempo.metainfo.xml.in  gresource.xml  tempo.desktop
demo/: Sense.vala  see.vala
po/: POTFILES  com.github.dcharles525.Tempo.pot  de.po  en.po  es.po  meson.build
src/: .Chart.vala.swo  .Chart.vala.swp  .Tempo.vala.swp  Chart.vala  Tempo  Tempo.vala
src/Libraries/: Sense.vala
src/Services/: .Temperature.vala.swp
src/Styles/: TempText.css
src/Widgets/: .TempText.vala.swp  TempText.vala
(+3 files in other folders)
